force-app/main/default/objects/DuplicationConfiguration__mdt/DuplicationConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Duplication Configuration</label>
    <pluralLabel>Duplication Configurations</pluralLabel>
</CustomObject>