force-app/main/default/objects/DuplicationConfiguration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Configuration description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>