force-app/main/default/objects/DuplicationConfiguration__mdt/fields/MatchFields__c.field-meta.xml
<CustomField>
    <fullName>MatchFields__c</fullName>
    <description>Comma-separated list of field API names for matching</description>
    <label>Match Fields</label>
    <type>TextArea</type>
</CustomField>