force-app/main/default/objects/DuplicationConfiguration__mdt/fields/MatchFieldWeights__c.field-meta.xml
<CustomField>
    <fullName>MatchFieldWeights__c</fullName>
    <description>JSON mapping of fields to weights</description>
    <label>Match Field Weights</label>
    <type>TextArea</type>
</CustomField>