force-app/main/default/objects/DuplicationConfiguration__mdt/fields/MatchThreshold__c.field-meta.xml
<CustomField>
    <fullName>MatchThreshold__c</fullName>
    <description>Threshold score for considering matches (0-100)</description>
    <label>Match Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>