force-app/main/default/objects/DuplicationConfiguration__mdt/fields/PostMergeApexHandler__c.field-meta.xml
<CustomField>
    <fullName>PostMergeApexHandler__c</fullName>
    <description>Apex class to invoke after merge operations</description>
    <label>Post-Merge Apex Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>