force-app/main/default/objects/DuplicationConfiguration__mdt/fields/PreMergeApexHandler__c.field-meta.xml
<CustomField>
    <fullName>PreMergeApexHandler__c</fullName>
    <description>Apex class to invoke before merge operations</description>
    <label>Pre-Merge Apex Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>