force-app/main/default/objects/DuplicationConfiguration__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>